@@ -1,3 +1,7 @@
+2018-04-22  Liu Xin  <meteor1113@qq.com>
+
+	* init/init-editor.el (whitespace-style): Adjust whitespace.
+
 2017-11-01  Liu Xin  <meteor1113@qq.com>
 
 	* init/modules/init-ecb.el : Change ecb-compile-window-height to 0.125
